@@ -1,5 +1,13 @@
 2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build] Use gnulib module `double-slash-root'.
+
+	* rcsfnms.c (DOUBLE_SLASH_IS_DISTINCT_ROOT): If not #define:d,
+	#define to 0.
+	(dir_useful_len): Use `DOUBLE_SLASH_IS_DISTINCT_ROOT'.
+
+2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build] Move the config header (and template) from src/ to lib/.
 
 	* base.h: Don't #include "auto-sussed.h";
